--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ html {
     rgba(12, 10, 22, 0.863)
   );
 
-  --imp-text-color: #c770f0;
+  --imp-text-color: #e6f606;
 }
 
 .purple {
@@ -62,13 +62,13 @@ button:focus {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(178, 121, 216, 0.959);
+  background: rgba(225, 255, 2, 0.959);
   border-radius: 12px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(222, 130, 235, 0.911);
+  background: rgba(225, 255, 2, 0.959);
   border-radius: 12px;
 }
 
@@ -97,7 +97,7 @@ button:focus {
 
 .navbar-toggler span {
   display: block !important;
-  background-color: #be50f4 !important;
+  background-color: #e6f606 !important;
   height: 4px !important;
   width: 27px !important;
   margin-top: 5px !important;
@@ -155,8 +155,8 @@ button:focus {
 }
 
 .logo {
-  height: 1.4em !important;
-  width: 2.5em !important;
+  height: 4.5em !important;
+  width: 4.5em !important;
 }
 
 .navbar-nav .nav-link {
@@ -194,7 +194,7 @@ button:focus {
   height: 5px;
   width: 0;
   border-radius: 16px;
-  background: #c95bf5;
+  background: #e6f606;
   bottom: 1px;
   left: 0;
   z-index: -1;
@@ -281,17 +281,17 @@ button:focus {
 }
 
 .main-name {
-  color: #cd5ff8;
+  color: #e6f606;
 }
 
 .Typewriter__wrapper {
   font-size: 2.2em !important;
-  color: #be6adf !important;
+  color: #e6f606 !important;
   font-weight: 600 !important;
 }
 .Typewriter__cursor {
   font-size: 2.4em !important;
-  color: #b562d6 !important;
+  color: #e6f606 !important;
 }
 
 @media (max-width: 767px) {
@@ -371,7 +371,7 @@ button:focus {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background: #68187a;
+  background: #e6f606;
   transition: 0.5s;
   transform: scale(0.9);
   z-index: -1;
@@ -379,13 +379,13 @@ button:focus {
 
 .home-social-icons:hover::before {
   transform: scale(1.1);
-  box-shadow: 0 0 15px #801f95;
+  box-shadow: 0 0 15px #e6f606;
 }
 
 .home-social-icons:hover {
-  color: #87209e;
-  box-shadow: 0 0 5px #87209e;
-  text-shadow: 0 0 2px #87209e;
+  color: #000000;
+  box-shadow: 0 0 5px #000000;
+  text-shadow: 0 0 2px #000000;
 }
 
 .social-icons {
@@ -395,7 +395,7 @@ button:focus {
 }
 
 .icon-colour {
-  color: #700c86 !important;
+  color: #000000 !important;
 }
 
 /* --------- */
@@ -404,8 +404,10 @@ button:focus {
 .footer {
   background-color: rgb(10, 4, 22);
   bottom: 0 !important;
+  /* position: absolute; */
   padding-top: 10px !important;
   padding-bottom: 8px !important ;
+  width: 100%;
 }
 .footer-copywright {
   text-align: center !important;
@@ -459,8 +461,15 @@ button:focus {
   height: auto !important;
 }
 
+.project-card img {
+  width: 100%;
+  height: 200px; /* Set a fixed height */
+  object-fit: cover; /* Ensures the image scales nicely and doesn't stretch */
+}
+
+
 .project-card-view {
-  box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459) !important;
+  box-shadow: 0 5px 5px 5px rgba(243, 255, 8, 0.796) !important;
   color: white !important;
   background-color: transparent !important;
   opacity: 0.9 !important;
@@ -483,7 +492,7 @@ button:focus {
 
 .blog-card-view {
   background-color: transparent !important;
-  box-shadow: 0 3px 3px 2px rgba(145, 77, 161, 0.459) !important;
+  box-shadow: 0 3px 3px 2px rgba(198, 245, 13, 0.459) !important;
   color: white !important;
   transition: all 0.5s ease 0s !important;
   height: 100% !important;
@@ -501,7 +510,7 @@ button:focus {
 .blog-card-view:hover {
   transform: scale(1.02) !important;
   overflow: hidden !important;
-  box-shadow: 0 3px 3px 5px rgba(155, 88, 173, 0.65) !important;
+  box-shadow: 0 3px 3px 5px rgba(186, 245, 7, 0.65) !important;
 }
 
 .card-img-top {
@@ -518,14 +527,14 @@ button:focus {
 
 .btn-primary {
   color: #fff !important;
-  background-color: #623686 !important;
-  border-color: #623686 !important;
+  background-color: #e6f606 !important;
+  border-color: #e6f606 !important;
 }
 
 .btn-primary:hover {
   color: #fff !important;
-  background-color: #6d20c5d7 !important;
-  border-color: #6d20c5d7 !important;
+  background-color: #e6f606 !important;
+  border-color: #e6f606 !important;
 }
 .btn:focus {
   outline: none !important;
@@ -555,7 +564,7 @@ button:focus {
   margin: 15px !important;
   padding: 10px !important;
   opacity: 0.93 !important;
-  border: 1.7px solid rgba(200, 137, 230, 0.637) !important;
+  border: 1.7px solid rgba(173, 231, 12, 0.637) !important;
   vertical-align: middle !important;
   text-align: center !important;
   border-radius: 5px !important;
@@ -574,11 +583,18 @@ button:focus {
 .tech-icons:hover {
   transform: scale(1.05) !important;
   overflow: hidden !important;
-  border: 2.2px solid rgba(197, 115, 230, 0.883) !important;
+  border: 2.2px solid rgba(221, 255, 0, 0.883) !important;
 }
 .tech-icon-images {
   padding: 20px !important;
   line-height: 1.6 !important;
+}
+
+.tech-icons p {
+  margin-top: 5px;
+  font-size: 18px; /* Reduce font size */
+  font-weight: 400; /* Lighter font weight for cleaner look */
+  color: white; /* Match color scheme */
 }
 
 .quote-card-view {
@@ -645,7 +661,7 @@ button:focus {
 .resume .resume-item {
   padding: 0 0 10px 25px;
   margin-top: -2px;
-  border-left: 2px solid #8a49a8;
+  border-left: 2px solid #e6f606;
   position: relative;
 }
 
@@ -682,7 +698,7 @@ button:focus {
   left: -9px;
   top: 0;
   background: #fff;
-  border: 2px solid #8a49a8;
+  border: 2px solid #e6f606;
 }
 
 .like-item {
@@ -692,8 +708,8 @@ button:focus {
 }
 
 .like-btn {
-  background-color: #934cce5e !important;
-  border-color: #934cce5e !important;
+  background-color: #e6f606 !important;
+  border-color: #e6f606 !important;
   padding: 0.25rem 0.98rem !important;
   border-radius: 5px !important;
   line-height: 1.4 !important;
@@ -702,8 +718,8 @@ button:focus {
 
 .like-btn:hover {
   transform: translateY(-2px) !important;
-  background-color: #a24dd386 !important;
-  border-color: #a24dd386 !important;
+  background-color: #e6f606 !important;
+  border-color: #e6f606 !important;
 }
 
 .animate-like {
@@ -727,7 +743,7 @@ button:focus {
 
 .fork-btn-inner {
   line-height: 1.4em !important;
-  background-color: #934cce5e !important;
+  background-color: #e6f606 !important;
   padding: 0.25rem 1.1rem !important;
   vertical-align: middle !important;
   text-align: center !important;
@@ -735,9 +751,82 @@ button:focus {
 
 .fork-btn-inner:hover {
   transform: translateY(-2px) !important;
-  background-color: #a24dd386 !important;
-  border-color: #a24dd386 !important;
+  background-color: #e6f606 !important;
+  border-color: #e6f606 !important;
 }
 .fork-btn-inner::after {
   display: none !important;
+}
+
+/*  */
+/* Research */
+/*  */
+
+.research-section {
+  position: relative !important;
+  padding-top: 150px !important;
+  padding-bottom: 30px !important;
+  background-image: var(--section-background-color) !important;
+}
+
+.project-heading {
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 2.5em;
+}
+
+.purple {
+  color: #a855f7;
+}
+
+.intro-text {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 1.2em;
+  color: #fff82f;
+}
+
+.research-description{
+  text-align: justify;
+}
+
+.research-row {
+  margin-bottom: 40px;
+}
+
+.research-col {
+  box-shadow: 2px 2px 4px 2px  rgba(243, 255, 8, 0.796) !important;
+  color: white !important;
+  background-color: transparent !important;
+  opacity: 0.9 !important;
+  transition: all 0.5s ease 0s !important;
+  height: 100% !important;
+}
+
+.research-title {
+  padding-top: 2px;
+  font-size: 1.8em;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.research-description {
+  font-size: 1.2em;
+  color: #b0b0b0;
+  margin-bottom: 15px;
+}
+
+.research-link {
+  color: #0e7eed;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.research-link:hover {
+  text-decoration: underline;
+  color: #000000;
+}
+
+.research-row a:hover{
+  color: #0e7eed;
 }
